@@ -8,7 +8,7 @@ from sql.conditionals import Coalesce
 
 from trytond.pyson import PYSONEncoder
 from .field import (Field, size_validate, instanciate_values, domain_validate,
-    search_order_validate, context_validate)
+    search_order_validate, context_validate, instantiate_context)
 from ...pool import Pool
 from ...tools import grouped_slice
 from ...transaction import Transaction
@@ -278,7 +278,10 @@ class Many2Many(Field):
 
     def __set__(self, inst, value):
         Target = self.get_target()
-        super(Many2Many, self).__set__(inst, instanciate_values(Target, value))
+        ctx = instantiate_context(self, inst)
+        with Transaction().set_context(ctx):
+            records = instanciate_values(Target, value)
+        super(Many2Many, self).__set__(inst, records)
 
     def convert_domain_tree(self, domain, tables):
         Target = self.get_target()
